--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,81 @@
-# Compiled class file
+##################
+# Compiled files #
+##################
 *.class
 
-# Log file
-*.log
+##################
+# intellij files #
+##################
+*.iws
+*.iml
+*.ipr
+!.idea/runConfigurations
+.idea/inspectionProfiles
+.idea/libraries
+.idea/codeStyles
+.idea/shelf
+.idea/*.*
 
-# BlueJ files
-*.ctxt
+#################
+# eclipse files #
+#################
+/.project
+/.classpath
+/.settings
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+#########################
+# maven generated files #
+#########################
+/target
+*.versionsBackup
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
+#############
+# Zip files #
+#############
+*.tar
 *.zip
-*.tar.gz
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
 *.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+##############
+# Logs files #
+##############
+*.log
+
+#################
+# test-ng files #
+#################
+/test-output
+
+############################
+# Binaries generated files #
+############################
+/bin
+
+################
+# gradle files #
+################
+/build
+/.gradle
+/gradle
+/out
+# Ignore Gradle GUI config
+gradle-app.setting
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!/gradle/wrapper/gradle-wrapper.jar
+!/gradle/wrapper/gradle-wrapper.properties
+# Cache of project
+.gradletasknamecache
+# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
+# gradle/wrapper/gradle-wrapper.properties
+
+##############################################################
+# virtual machine crash logs                                 #
+# see http://www.java.com/en/download/help/error_hotspot.xml #
+##############################################################
 hs_err_pid*
+/.attach_pid*
