prepare new major release 1

--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ plugins {
 apply plugin: "jacoco"
 
 group = "de.alpharogroup"
-version "1.0-SNAPSHOT"
+version = "$projectVersion"
 
 repositories {
     jcenter()
