create new snapshot version 1.2-SNAPSHOT for the next development cycle

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 # project properties
 groupPackage=de.alpharogroup
-projectVersion=1.1
+projectVersion=1.2-SNAPSHOT
 projectSourceCompatibility=1.8
 projectHolderUsername=astrapi69
 projectDescription=Project that provides utility classes for calculate checksums for files, byte arrays and objects
