--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 # project properties
-groupPackage=de.alpharogroup
+groupPackage=io.github.astrapi69
 projectVersion=1.2-SNAPSHOT
 projectSourceCompatibility=1.8
 projectHolderUsername=astrapi69
@@ -8,17 +8,17 @@ projectScmProviderDomain=github.com
 projectScmProviderUrl=https://github.com/
 projectLicenseName=MIT License
 projectLicenseUrl=http://www.opensource.org/licenses/mit-license.php
-projectOrganizationName=Alpha Ro Group UG (h.b.)
-projectOrganizationUrl=http://www.alpharogroup.de/
+projectOrganizationName=Asterios Raptis
+projectOrganizationUrl=https://astrapi69.github.io/
 projectLicenseDistribution=repo
 projectIssueManagementSystem=GitHub
 projectRepositoriesReleasesRepoUrl=https://oss.sonatype.org/service/local/staging/deploy/maven2/
 projectRepositoriesSnapshotsRepoUrl=https://oss.sonatype.org/content/repositories/snapshots
 # dependencies versions
-cryptApiVersion=7.3
+cryptApiVersion=7.4
 # test dependencies versions
-testObjectsVersion=5.3
+testObjectsVersion=5.4
 meanbeanVersion=2.0.3
-testngVersion=7.2.0
+testngVersion=7.4.0
 # for deploy on sonatype
 systemProp.org.gradle.internal.publish.checksums.insecure=true
