--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,20 @@
-# project properties
+######################
+# project properties #
+######################
+projectVersion=1.2
 groupPackage=io.github.astrapi69
-projectVersion=1.2-SNAPSHOT
 projectSourceCompatibility=1.8
+projectInceptionYear=2015
 projectHolderUsername=astrapi69
+projectLeaderName=Asterios Raptis
+slash=/
+colon=:
+issuesPath=/issues
 projectDescription=Project that provides utility classes for calculate checksums for files, byte arrays and objects
 projectScmProviderDomain=github.com
 projectScmProviderUrl=https://github.com/
+projectScmGitUrlPrefix=scm:git:git:@
+projectScmGitUrlSuffix=.git
 projectLicenseName=MIT License
 projectLicenseUrl=http://www.opensource.org/licenses/mit-license.php
 projectOrganizationName=Asterios Raptis
@@ -14,11 +23,24 @@ projectLicenseDistribution=repo
 projectIssueManagementSystem=GitHub
 projectRepositoriesReleasesRepoUrl=https://oss.sonatype.org/service/local/staging/deploy/maven2/
 projectRepositoriesSnapshotsRepoUrl=https://oss.sonatype.org/content/repositories/snapshots
-# dependencies versions
+projectRepositoriesUserNameKey=ossrhUsername
+projectRepositoriesPasswordKey=ossrhPassword
+###########################
+# gradle-plugins versions #
+###########################
+gradlePluginVersionsVersion=0.39.0
+licenseGradlePluginVersion=0.15.0
+#########################
+# dependencies versions #
+#########################
 cryptApiVersion=7.4
-# test dependencies versions
+##############################
+# test dependencies versions #
+##############################
 testObjectsVersion=5.4
 meanbeanVersion=2.0.3
 testngVersion=7.4.0
-# for deploy on sonatype
+##########################
+# for deploy on sonatype #
+##########################
 systemProp.org.gradle.internal.publish.checksums.insecure=true
