--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 ######################
 # project properties #
 ######################
-projectVersion=1.3-SNAPSHOT
+projectVersion=1.3
 groupPackage=io.github.astrapi69
 projectSourceCompatibility=1.8
 projectInceptionYear=2015
@@ -31,17 +31,17 @@ projectRepositoriesPasswordKey=ossrhPassword
 gradlePluginVersionsVersion=0.42.0
 licenseGradlePluginVersion=0.16.1
 grgitGradlePluginVersion=4.1.1
-spotlessGradlePluginVersion=6.5.2
+spotlessGradlePluginVersion=6.6.1
 #########################
 # dependencies versions #
 #########################
-cryptApiVersion=7.4
+cryptApiVersion=7.7
 ##############################
 # test dependencies versions #
 ##############################
-testObjectsVersion=5.4
+testObjectsVersion=6
 meanbeanVersion=2.0.3
-testngVersion=7.4.0
+testngVersion=7.6.0
 ##########################
 # for deploy on sonatype #
 ##########################
