--- a/gradle.properties
+++ b/gradle.properties
@@ -39,6 +39,7 @@ cryptApiVersion=7.7
 ##############################
 # test dependencies versions #
 ##############################
+fileWorkerVersion=8.2
 testObjectsVersion=6
 meanbeanVersion=2.0.3
 testngVersion=7.5
