--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
 ######################
 # project properties #
 ######################
-projectVersion=1.4-SNAPSHOT
+projectVersion=2-SNAPSHOT
 groupPackage=io.github.astrapi69
-projectSourceCompatibility=1.8
+projectSourceCompatibility=11
 projectInceptionYear=2015
 projectHolderUsername=astrapi69
 projectLeaderName=Asterios Raptis
@@ -30,19 +30,19 @@ projectRepositoriesPasswordKey=ossrhPassword
 ###########################
 gradlePluginVersionsVersion=0.42.0
 licenseGradlePluginVersion=0.16.1
-grgitGradlePluginVersion=4.1.1
-spotlessGradlePluginVersion=6.6.1
+grgitGradlePluginVersion=5.0.0
+spotlessGradlePluginVersion=6.9.0
 #########################
 # dependencies versions #
 #########################
-cryptApiVersion=7.7
+cryptApiVersion=8.1
 ##############################
 # test dependencies versions #
 ##############################
 fileWorkerVersion=8.2
-testObjectsVersion=6
+testObjectsVersion=6.1
 meanbeanVersion=2.0.3
-testngVersion=7.5
+testngVersion=7.6.1
 ##########################
 # for deploy on sonatype #
 ##########################
