update of dependency crypt-api to new version to 8.3
- update of test dependency test-object to new minor version 7.1
- update of test dependency file-worker to new minor version 11.1

--- a/gradle.properties
+++ b/gradle.properties
@@ -31,16 +31,16 @@ projectRepositoriesPasswordKey=ossrhPassword
 gradlePluginVersionsVersion=0.42.0
 licenseGradlePluginVersion=0.16.1
 grgitGradlePluginVersion=5.0.0
-spotlessGradlePluginVersion=6.9.0
+spotlessGradlePluginVersion=6.10.0
 #########################
 # dependencies versions #
 #########################
-cryptApiVersion=8.2
+cryptApiVersion=8.3
 ##############################
 # test dependencies versions #
 ##############################
-fileWorkerVersion=8.2
-testObjectsVersion=6.1
+fileWorkerVersion=11.1
+testObjectVersion=7.1
 meanbeanVersion=2.0.3
 testngVersion=7.6.1
 ##########################
