--- a/build.gradle
+++ b/build.gradle
@@ -41,5 +41,9 @@ tasks.withType(JavaCompile) {
     // uncomment the next line for build with compiler argument -Xlint:deprecation
     // options.compilerArgs << "-Xlint:deprecation"
     // uncomment the next line for build with compiler argument -Xlint:unchecked
-    // options.compilerArgs << "-Xlint:unchecked"
+     options.compilerArgs << "-Xlint:unchecked"
+}
+
+tasks.named("test") {
+    it.mustRunAfter(tasks.named("jar"))
 }
