--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,10 @@ apply from: "gradle/packaging.gradle"
 apply from: "gradle/publishing.gradle"
 apply from: "gradle/repositories.gradle"
 apply from: "gradle/testing.gradle"
-sourceCompatibility = "$projectSourceCompatibility" as Object
+
+java {
+    sourceCompatibility = "$projectSourceCompatibility" as Object
+}
 
 tasks.withType(JavaCompile) {
     options.encoding = "UTF-8"
