--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
 ######################
 # project properties #
 ######################
-projectVersion=2.3-SNAPSHOT
+projectVersion=3-SNAPSHOT
 groupPackage=io.github.astrapi69
-projectSourceCompatibility=11
+projectSourceCompatibility=17
 projectInceptionYear=2015
 projectHolderUsername=astrapi69
 projectLeaderName=Asterios Raptis
@@ -28,21 +28,21 @@ projectRepositoriesPasswordKey=ossrhPassword
 ###########################
 # gradle-plugins versions #
 ###########################
-gradlePluginVersionsVersion=0.43.0
+gradlePluginVersionsVersion=0.50.0
 licenseGradlePluginVersion=0.16.1
-grgitGradlePluginVersion=5.0.0
-spotlessGradlePluginVersion=6.11.0
+grgitGradlePluginVersion=5.2.1
+spotlessGradlePluginVersion=6.23.3
 #########################
 # dependencies versions #
 #########################
-cryptApiVersion=8.4
+cryptApiVersion=8.7
 ##############################
 # test dependencies versions #
 ##############################
-fileWorkerVersion=11.5
-testObjectVersion=7.2
-meanbeanVersion=2.0.3
-testngVersion=7.6.1
+fileWorkerVersion=17.1
+testObjectVersion=8.2
+meanbeanVersion=3.0.0-M9
+testngVersion=7.8.0
 ##########################
 # for deploy on sonatype #
 ##########################
