--- a/gradle/licensing.gradle
+++ b/gradle/licensing.gradle
@@ -14,6 +14,7 @@ license {
               "**/*.dtd",
               "**/*.html",
               "**/*.jsp",
+              "**/package-info.java",
               "**/*.jpa",
               "**/*.sql",
               "**/*.properties",
