--- a/gradle.properties
+++ b/gradle.properties
@@ -25,24 +25,9 @@ projectRepositoriesReleasesRepoUrl=https://oss.sonatype.org/service/local/stagin
 projectRepositoriesSnapshotsRepoUrl=https://oss.sonatype.org/content/repositories/snapshots
 projectRepositoriesUserNameKey=ossrhUsername
 projectRepositoriesPasswordKey=ossrhPassword
-###########################
-# gradle-plugins versions #
-###########################
-gradlePluginVersionsVersion=0.50.0
-licenseGradlePluginVersion=0.16.1
-grgitGradlePluginVersion=5.2.1
-spotlessGradlePluginVersion=6.23.3
-#########################
-# dependencies versions #
-#########################
-cryptApiVersion=8.7
-##############################
-# test dependencies versions #
-##############################
-fileWorkerVersion=17.1
-testObjectVersion=8.2
-meanbeanVersion=3.0.0-M9
-testngVersion=7.8.0
+projectRepositoriesReleasesName=Sonatype Nexus Releases
+projectRepositoriesSnapshotsName=Sonatype Nexus Snapshots
+projectRepositoriesMavenUrl=https://plugins.gradle.org/m2/
 ##########################
 # for deploy on sonatype #
 ##########################
